fix hero image on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -298,7 +298,7 @@
     }
 
     .hero .hero-content {
-        padding-top: 110%;
+        padding-top: 130%;
     }
 
     .hero .hero-content img {
